Kelsey Development Sandbox/src/objects/DS_TRDETAIL1__c.object
<CustomObject>
    <fields>
        <fullName>Client_ID__c</fullName>
        <formula>Client__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipName>DS_Trauma1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SECTION__c</fullName>
        <defaultValue>&apos;-1&apos;</defaultValue>
        <label>SECTION</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STATUS_TRABUSE__c</fullName>
        <label>STATUS TRABUSE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>STATUS_TRACCIDENT__c</fullName>
        <label>STATUS TRACCIDENT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>STATUS_TRDOMVIO__c</fullName>
        <label>STATUS TRDOMVIO</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>STATUS_TRMEDICAL__c</fullName>
        <label>STATUS TRMEDICAL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>STATUS_TRNATURALDIS__c</fullName>
        <label>STATUS TRNATURALDIS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>STATUS_TRNEGLECT__c</fullName>
        <label>STATUS TRNEGLECT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>STATUS_TRPHYSASSAULT__c</fullName>
        <label>STATUS TRPHYSASSAULT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>STATUS_TRPSYCHABUSE__c</fullName>
        <label>STATUS TRPSYCHABUSE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>STATUS_TRSEXASSAULT__c</fullName>
        <label>STATUS TRSEXASSAULT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>STATUS_TRSEX__c</fullName>
        <label>STATUS TRSEX</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>STATUS_TRTRAFFICKING__c</fullName>
        <label>STATUS TRTRAFFICKING</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>STATUS_TRWAROUTSIDEUS__c</fullName>
        <label>STATUS TRWAROUTSIDEUS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>STATUS_TRWAR__c</fullName>
        <label>STATUS TRWAR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T10RBIO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Weapon type Biological</description>
        <label>T10RBIO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T10RCHEM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Weapon type Chemical</description>
        <label>T10RCHEM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T10RCONV__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Weapon type Conventional</description>
        <label>T10RCONV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T10RFREQ__c</fullName>
        <description>War out US frequency of experience</description>
        <label>T10RFREQ</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T10RINJAR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>War out US Serious injury Oth Ad Rel</description>
        <label>T10RINJAR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T10RINJC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>War out US Serious injury  Child</description>
        <label>T10RINJC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T10RINJOS__c</fullName>
        <description>War out US Serious injury Other Spec</description>
        <label>T10RINJOS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T10RINJOY__c</fullName>
        <defaultValue>false</defaultValue>
        <description>War out US Serious injury Oth Youth</description>
        <label>T10RINJOY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T10RINJO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>War out US Serious injury Other</description>
        <label>T10RINJO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T10RINJP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>War out US Serious injury Parent</description>
        <label>T10RINJP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T10RINJSB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>War out US Serious injury  Sibling</description>
        <label>T10RINJSB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T10RINJUA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>War out US Serious injury Unrel Ad</description>
        <label>T10RINJUA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T10RINJ__c</fullName>
        <description>War out US serious injury inflicted</description>
        <label>T10RINJ</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T10RRAD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Weapon type Radiological</description>
        <label>T10RRAD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T10RRB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>War out US revealed at Baseline</description>
        <label>T10RRB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T10RRMA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Weapon type Rocket and Mortar Attacks</description>
        <label>T10RRMA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T10RRODT__c</fullName>
        <description>War out US revealed at Other date</description>
        <label>T10RRODT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>T10RRO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>War out US revealed at Other</description>
        <label>T10RRO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T10RSETC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>War/Terrorism/Political Violence outside setting = Community</description>
        <label>T10RSETC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T10RSETH__c</fullName>
        <defaultValue>false</defaultValue>
        <description>War/Terrorism/Political Violence outside Setting = Home</description>
        <label>T10RSETH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T10RSETOS__c</fullName>
        <description>War/Terrorism/Political Violence inside  Setting = Other Specified</description>
        <label>T10RSETOS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T10RSETO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>War/Terrorism/Political Violence outside Setting = Other</description>
        <label>T10RSETO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T10RSETS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>War/Terrorism/Political Violence outside  Setting = School</description>
        <label>T10RSETS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T10RSETU__c</fullName>
        <defaultValue>false</defaultValue>
        <description>War/Terrorism/Political Violence outside  Setting = Unknown</description>
        <label>T10RSETU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T10RTYPE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>War out US type = experienced</description>
        <label>T10RTYPE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T10RTYPU__c</fullName>
        <defaultValue>false</defaultValue>
        <description>War out US type = Unknown</description>
        <label>T10RTYPU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T10RTYPV__c</fullName>
        <defaultValue>false</defaultValue>
        <description>War out US type = Vicarious</description>
        <label>T10RTYPV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T10RTYPW__c</fullName>
        <defaultValue>false</defaultValue>
        <description>War out US type = Witnessed</description>
        <label>T10RTYPW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T10RWPNU__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Weapon type Unknown</description>
        <label>T10RWPNU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T11RFREQ__c</fullName>
        <description>Illness/Med frequency of experience</description>
        <label>T11RFREQ</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T11RFRGT__c</fullName>
        <description>Illness/Med Frightening medical</description>
        <label>T11RFRGT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T11RILLAR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Who had Illness/Med = Other adult relative</description>
        <label>T11RILLAR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T11RILLC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Who had Illness/Med = Child</description>
        <label>T11RILLC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T11RILLOSP__c</fullName>
        <description>Who had Illness/Med = Other Specified</description>
        <label>T11RILLOSP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T11RILLOY__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Illness/Medical 4. Who had the illness/Medical Procedure= Other youth</description>
        <label>T11RILLOY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T11RILLO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Who had Illness/Med = Other</description>
        <label>T11RILLO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T11RILLP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Who had Illness/Med = Parent</description>
        <label>T11RILLP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T11RILLSB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Illness/Medical 4. Who had the illness/Medical Procedure= Sibling</description>
        <label>T11RILLSB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T11RILLUA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Who had Illness/Med = Unrelated adult</description>
        <label>T11RILLUA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T11RLIFE__c</fullName>
        <description>Illness/Med Condition life threatening</description>
        <label>T11RLIFE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T11RPAIN__c</fullName>
        <description>Illness/Med Painful medical</description>
        <label>T11RPAIN</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T11RPICU__c</fullName>
        <description>Illness/Med Pediatric Intensive Care Unit</description>
        <label>T11RPICU</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T11RRB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Illness/Med revealed at Baseline</description>
        <label>T11RRB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T11RRODT__c</fullName>
        <description>Illness/Med revealed at Other date</description>
        <label>T11RRODT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>T11RRO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Illness/Med revealed at Other</description>
        <label>T11RRO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T11RSETEX__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Type of care Illness/Med condition included = Extended Care Facility</description>
        <label>T11RSETEX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T11RSETHS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Type of care Illness/Med condition included = Hospital Admission</description>
        <label>T11RSETHS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T11RSETH__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Type of care Illness/Med condition included= Extended Home Care</description>
        <label>T11RSETH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T11RSETICU__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Type of care this Illness/Med condition included= PICU</description>
        <label>T11RSETICU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T11RSETOS__c</fullName>
        <description>Type of care Illness/Med condition included = other specified</description>
        <label>T11RSETOS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T11RSETO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Type of care Illness/Med condition included = other</description>
        <label>T11RSETO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T11RSETU__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Illness/Med Setting = Unknown</description>
        <label>T11RSETU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T11RTYPE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Illness/Med type = experienced</description>
        <label>T11RTYPE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T11RTYPU__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Illness/Med type = Unknown</description>
        <label>T11RTYPU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T11RTYPV__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Illness/Med type = Vicarious</description>
        <label>T11RTYPV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T11RTYPW__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Illness/Med type = Witnessed</description>
        <label>T11RTYPW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T12RACUK__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ser Inj/ Accident type = Unknown</description>
        <label>T12RACUK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T12RDISC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ser Inj/ Accident Perm disability Child</description>
        <label>T12RDISC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T12RDISOR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ser Inj/ Accident Perm disab Oth Ad Rel</description>
        <label>T12RDISOR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T12RDISOS__c</fullName>
        <description>Ser Inj/ Accident Perm disab Other Spec</description>
        <label>T12RDISOS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T12RDISOY__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ser Inj/ Accident Perm disab Other Youth</description>
        <label>T12RDISOY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T12RDISO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ser Inj/ Accident Perm disability Other</description>
        <label>T12RDISO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T12RDISP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ser Inj/ Accident Perm disabilityParent</description>
        <label>T12RDISP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T12RDISSB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ser Inj/ Accident Perm disability Sibling</description>
        <label>T12RDISSB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T12RDISUA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ser Inj/ Accident Perm disability Un Ad</description>
        <label>T12RDISUA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T12RDIS__c</fullName>
        <description>Ser Inj/ Accident disability/death</description>
        <label>T12RDIS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T12RDOGBT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ser Inj/Accident type = Dog Bite</description>
        <label>T12RDOGBT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T12RDRWN__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ser Inj/Accident type = Near Drowning</description>
        <label>T12RDRWN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T12RFALL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ser. Accident/Injury type accident = Fall</description>
        <label>T12RFALL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T12RFREQ__c</fullName>
        <description>Ser Inj/Accident frequency of experience</description>
        <label>T12RFREQ</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T12RHSFRE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ser. Accident/Injury type accident = House Fire</description>
        <label>T12RHSFRE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T12RINJAB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ser. Accident/Injury type Injury type= Animal Bite</description>
        <label>T12RINJAB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T12RINJBB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ser. Accident/Injury type Injury type= Broken Bones</description>
        <label>T12RINJBB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T12RINJBN__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ser. Accident/Injury type Injury type= Burn</description>
        <label>T12RINJBN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T12RINJCC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ser. Accident/Injury type Injury type= Concussion</description>
        <label>T12RINJCC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T12RINJOS__c</fullName>
        <description>Ser. Accident/Injury type Injury type= Other Specified</description>
        <label>T12RINJOS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T12RINJO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ser. Accident/Injury type Injury type= Other</description>
        <label>T12RINJO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T12RINJUK__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ser. Accident/Injury type Injury type= Unknown</description>
        <label>T12RINJUK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T12RMV__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ser Inj/Accident type = Motor Vehicle</description>
        <label>T12RMV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T12ROTHR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ser Inj/Accident type Other</description>
        <label>T12ROTHR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T12ROTHSP__c</fullName>
        <description>Ser Inj/Accident type = Other Specified</description>
        <label>T12ROTHSP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T12RRB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ser Inj/Accident revealed at Baseline</description>
        <label>T12RRB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T12RRODT__c</fullName>
        <description>Ser Inj/Accident revealed at Other date</description>
        <label>T12RRODT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>T12RRO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ser Inj/Accident revealed at Other</description>
        <label>T12RRO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T12RSETC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ser Inj/Accident Setting = Community</description>
        <label>T12RSETC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T12RSETH__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ser Inj/Accident Setting = Home</description>
        <label>T12RSETH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T12RSETOS__c</fullName>
        <description>Ser Inj/Accident Setting = Other Spec</description>
        <label>T12RSETOS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T12RSETO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ser Inj/Accident Setting = Other</description>
        <label>T12RSETO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T12RSETS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ser Inj/Accident Setting = School</description>
        <label>T12RSETS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T12RSETU__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ser Inj/Accident Setting = Unknown</description>
        <label>T12RSETU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T12RSHOOT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ser Inj/ Accident type = Shooting</description>
        <label>T12RSHOOT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T12RTYPE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ser Inj/Accident type = experienced</description>
        <label>T12RTYPE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T12RTYPU__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ser Inj/Accident type = Unknown</description>
        <label>T12RTYPU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T12RTYPV__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ser Inj/Accident type = Vicarious</description>
        <label>T12RTYPV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T12RTYPW__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ser Inj/Accident type = Witnessed</description>
        <label>T12RTYPW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T13RDRGT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Natural Dis type = Drought</description>
        <label>T13RDRGT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T13RDSUK__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Natural Dis type = Unknown</description>
        <label>T13RDSUK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T13REQ__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Natural Dis type = Earthquake</description>
        <label>T13REQ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T13REVAC__c</fullName>
        <description>Natural Dis family evacuate home</description>
        <label>T13REVAC</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T13RFIRE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Natural Dis type = Fire</description>
        <label>T13RFIRE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T13RFLOD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Natural Dis type = Flood</description>
        <label>T13RFLOD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T13RHDAM__c</fullName>
        <description>Natural Dis home severely damaged</description>
        <label>T13RHDAM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T13RHURR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Natural Dis type = Hurricane</description>
        <label>T13RHURR</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>